﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-10-24 Michael Keck <mkkeck@users.sourceforge.net>
    * config.inc.php, themes/*/layout.inc.php:
      bug #1050666 - Query window too small darkblue/orange theme

2004-10-23 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: top index for user initials

2004-10-22 Alexander M. Turek
    * lang/english-*.inc.php: Grammar fix.

2004-10-22 Michal Čihař  <michal@cihar.com>
    * db_details_structure.php: Use "Structure" instead of "Properties" for
      link to table structure.
    * db_operations.php, lang/*: We switch to database here. not table.
    * lang/*: strProperties is not used anywhere now.
    * config.inc.php: Mention db_operations.php possibility.
    * libraries/transformations/text_plain__external.inc.php: Unless admin
      specifies there programs to use, it does nothing now.

2004-10-21 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_query_box.php: bug 1050691, missing parameters

2004-10-21 Michael Keck <mkkeck@users.sourceforge.net>
    * libraries/common.lib.php: feature request #1036254
      Add a link by MySQL-Error #1062 - Duplicate entry

2004-10-21 Michal Čihař  <michal@cihar.com>
    * [too many files to mention]: Cleanup of message displaying and
      navigation reloading. Messages are now displayed bellow tabs (RFE
      #1005511), navigation is reloaded once in header (I'm not sure whether I
      choose correct version of reload code, we have several diferent, but it
      seems to work well).
    * tbl_properties_structure.php, libraries/common.lib.php,
      libraries/display_tbl.lib.php: New function PMA_buttonOrImage to display
      button or image to submit form and not to duplicate code on all places.
    * tbl_addfield.php: Display tabs.
    * mult_submits.inc.php, tbl_properties_structure.php: Allow index creating
      on multiple fields (RFE #990136).