@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-10-25 Michal Čihař  <michal@cihar.com>
+    * libraries/common.lib.php: Fix URI detection in case REQUEST_URI contains
+      full URI (patch #1044123).
+
 2004-10-24 Michael Keck <mkkeck@users.sourceforge.net>
     * config.inc.php, themes/*/layout.inc.php:
       bug #1050666 - Query window too small darkblue/orange theme
